
Make sure the Escreen README goes in the tarball.
----------------------------------------------------------------------
Thu Oct 31 11:52:59 2002                        Michael Jennings (mej)

Argh!  Last-minute discoveries....
----------------------------------------------------------------------
Mon Nov  4 16:28:17 2002                        Michael Jennings (mej)

Added XK_ISO_Left_Tab as an alias for XK_Tab, suggested by Jason
<jason@sdf.lonestar.org>.
----------------------------------------------------------------------
Mon Nov  4 17:33:00 2002                        Michael Jennings (mej)

Let's try that again, shall we?
----------------------------------------------------------------------
Thu Nov  7 12:37:08 2002                        Michael Jennings (mej)

Fixed typo in configure.in that caused ESCREEN to always be defined.

Added support for /etc/screen/screenrc, as it is on gentoo.
----------------------------------------------------------------------
Mon Nov 18 12:28:43 2002                        Michael Jennings (mej)

Remove acinclude.m4 now that libast.m4 has all that stuff in it.

Hopefully improve exit handling.

Change "export TERM=vt100" to the portable "TERM=vt100; export TERM"
syntax.
----------------------------------------------------------------------
Thu Nov 21 14:03:23 2002                        Michael Jennings (mej)

Fix for Debian Bug #169933, seg fault with invalid default font index.
----------------------------------------------------------------------
Thu Nov 21 14:11:29 2002                        Michael Jennings (mej)

Fixed a typo noted by Bill Allombert <allomber@math.u-bordeaux.fr>.
----------------------------------------------------------------------
Tue Nov 26 17:51:34 2002                        Michael Jennings (mej)

I need my Escreen sessions to be able to beep, so let's allow that.
----------------------------------------------------------------------