@@ -2518,7 +2518,7 @@ err_msg(void *xd, int err, char *msg)
 {
 #if DEBUG >= DEBUG_ESCREEN
     if (DEBUG_LEVEL >= DEBUG_ESCREEN) {
-        char *sc[] = { "Copy mode", "Bell in", "Wuff" };
+        char *sc[] = { "Copy mode", "Bell in" };
         int n, nsc = sizeof(sc) / sizeof(char *);
 
         /* there are certain things that would make sense if we were displaying
@@ -2527,10 +2527,6 @@ err_msg(void *xd, int err, char *msg)
         if (strlen(msg)) {
             for (n = 0; n < nsc; n++) {
                 if (!strncmp(msg, sc[n], strlen(sc[n]))) {
-                    if (n == 2) {
-                        /* Beep */
-                        scr_bell();
-                    }
                     break;
                 }
             }
@@ -2538,11 +2534,16 @@ err_msg(void *xd, int err, char *msg)
                 menu_dialog(NULL, msg, 0, NULL, NULL);
             }
         }
-    }
+    } else
 #endif
+
+    if (!BEG_STRCASECMP(msg, "Wuff")) {
+        /* screen beeped, so go ahead and use our normal beep. */
+        scr_bell();
+    }
+
     USE_VAR(xd);
     USE_VAR(err);
-    USE_VAR(msg);
     return NS_SUCC;
 }
 
